<resources>
    <string name="app_name">Homework</string>

    <string name="id">ID</string>
    <string name="day">Day</string>
    <string name="homework">Homework</string>
    <string name="lecture">Lecture</string>
    <string name="deadline">Deadline</string>

    <string name="insert_data">Insert Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="edit_data">Edit Data</string>
    <string name="save">Save</string>

    <string name="delete">Delete</string>

    <string name="id_hint">New ID</string>
    <string name="day_hint">Day DD Month Years</string>
    <string name="homework_hint">Homework Description</string>
    <string name="lecture_hint">Lecture Name</string>
    <string name="deadline_hint">Day DD Month Years</string>
</resources>
